--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "scripts": {
     "clean": "npm run clean-server && npm run clean-app",
     "build": "npm run build-server && npm run build-client",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npm run build && npm run test-eslint",
+    "test-eslint": "eslint app && eslint client && eslint server",
     "clean-server": "rm index.js",
     "clean-client": "rm public/bundle.js",
     "build-server": "webpack --progress --color --config webpack.server.config.js",
     "build-client": "NODE_ENV=production webpack --progress --color -p",
-    "start": "node ."
+    "start": "npm run build && node ."
   },
   "author": "",
   "license": "ISC",
@@ -21,6 +22,11 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "css-loader": "^0.23.1",
+    "eslint": "^2.13.1",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-plugin-import": "^1.9.2",
+    "eslint-plugin-jsx-a11y": "^1.5.3",
+    "eslint-plugin-react": "^5.2.2",
     "extract-text-webpack-plugin": "^1.0.1",
     "json-loader": "^0.5.4",
     "node-sass": "^3.8.0",
