--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "clean": "npm run clean-server && npm run clean-client",
     "build": "npm run build-server && npm run build-client",
-    "test": "npm run build && npm run test-eslint",
+    "test": "npm run build && npm run test-eslint && npm run test-server",
     "test-eslint": "eslint app && eslint client && eslint server",
+    "test-server": "mocha --compilers js:babel-register --recursive server/test",
     "clean-server": "rm index.js",
     "clean-client": "rm public/bundle.js",
     "build-server": "webpack --progress --color --config webpack.config.server.js",
@@ -23,6 +24,9 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
+    "babel-register": "^6.9.0",
+    "chai": "^3.5.0",
+    "chai-as-promised": "^5.3.0",
     "css-loader": "^0.23.1",
     "eslint": "^2.13.1",
     "eslint-config-airbnb": "^9.0.1",
@@ -31,6 +35,7 @@
     "eslint-plugin-react": "^5.2.2",
     "extract-text-webpack-plugin": "^1.0.1",
     "json-loader": "^0.5.4",
+    "mocha": "^2.5.3",
     "node-sass": "^3.8.0",
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
