--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build-server": "webpack --progress --color --config webpack.config.server.js",
     "build-client": "NODE_ENV=production webpack --config webpack.config.client.js --progress --color -p",
     "start": "npm run build && node .",
-    "start-dev": "webpack-dev-server --config webpack.config.client-dev.js --content-base dev-static/"
+    "start-dev": "webpack-dev-server --config webpack.config.client-dev.js --content-base dev-static/ --inline --hot"
   },
   "author": "",
   "license": "ISC",
