--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "test-server": "mocha --compilers js:babel-register --recursive server/test",
     "clean-server": "rm index.js",
     "clean-client": "rm public/bundle.js",
-    "build-server": "webpack --progress --color --config webpack.config.server.js",
-    "build-client": "NODE_ENV=production webpack --config webpack.config.client.js --progress --color -p",
+    "build-server": "webpack --progress --color --bail --config webpack.config.server.js",
+    "build-client": "NODE_ENV=production webpack --config webpack.config.client.js --progress --color -p --bail",
     "postinstall": "npm run build",
     "start": "node .",
     "start-dev": "webpack-dev-server --config webpack.config.client-dev.js --content-base dev-static/ --inline --hot"
