--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "css-loader": "^0.23.1",
     "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
+    "isomorphic-fetch": "^2.2.1",
     "json-loader": "^0.5.4",
     "node-sass": "^3.8.0",
     "react": "^15.1.0",
