Add istanbul (nyc) and coveralls integration

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "npm run build-server && npm run build-client",
     "test": "npm run build && npm run test-eslint && npm run test-server",
     "test-eslint": "eslint app && eslint client && eslint server",
-    "test-server": "mocha --compilers js:babel-register --recursive test-server/",
+    "test-server": "nyc --require babel-register mocha --recursive test-server/",
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
     "clean-server": "rm index.js",
     "clean-client": "rm public/bundle.js",
     "build-server": "webpack --progress --color --bail --config webpack.config.server.js",
@@ -24,12 +25,14 @@
     "babel-register": "^6.9.0",
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
+    "coveralls": "^2.11.9",
     "eslint": "^2.13.1",
     "eslint-config-airbnb": "^9.0.1",
     "eslint-plugin-import": "^1.9.2",
     "eslint-plugin-jsx-a11y": "^1.5.3",
     "eslint-plugin-react": "^5.2.2",
     "mocha": "^2.5.3",
+    "nyc": "^6.6.1",
     "proxyquire": "^1.7.10",
     "sinon": "^1.17.4",
     "supertest": "^1.2.0",
