--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
   "scripts": {
     "clean": "npm run clean-server && npm run clean-client",
     "build": "npm run build-server && npm run build-client",
-    "test": "npm run build && npm run test-server",
-    "test-server": "mocha --compilers js:babel-register --recursive test-server/",
+    "test": "npm run && npm run test-server",
+    "test-eslint": "eslint app && eslint client && eslint server",
+    "test-server": "NODE_PATH=$NODE_PATH:app nyc --require babel-register mocha --recursive test-server/",
+    "test-app": "NODE_PATH=$NODE_PATH:app nyc --require babel-register mocha --recursive test-app/",
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
     "clean-server": "rm index.js",
     "clean-client": "rm public/bundle.js",
     "build-server": "webpack --progress --color --bail --config webpack.config.server.js",
@@ -23,6 +26,7 @@
     "babel-register": "^6.9.0",
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
+    "deep-freeze": "0.0.1",
     "eslint": "^2.13.1",
     "eslint-config-airbnb": "^9.0.1",
     "eslint-plugin-import": "^1.9.2",
