--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-register": "^6.9.0",
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
+    "coveralls": "^2.11.9",
     "deep-freeze": "0.0.1",
     "eslint": "^2.13.1",
     "eslint-config-airbnb": "^9.0.1",
@@ -33,6 +34,7 @@
     "eslint-plugin-jsx-a11y": "^1.5.3",
     "eslint-plugin-react": "^5.2.2",
     "mocha": "^2.5.3",
+    "nyc": "^6.6.1",
     "proxyquire": "^1.7.10",
     "sinon": "^1.17.4",
     "supertest": "^1.2.0",
