--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "eslint-plugin-jsx-a11y": "^1.5.3",
     "eslint-plugin-react": "^5.2.2",
     "mocha": "^2.5.3",
+    "nock": "^8.0.0",
     "nyc": "^6.6.1",
     "proxyquire": "^1.7.10",
+    "redux-mock-store": "^1.1.2",
     "sinon": "^1.17.4",
     "supertest": "^1.2.0",
     "webpack-dev-server": "^1.14.1"
