--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "build-client": "NODE_ENV=production webpack --config webpack.config.client.js --progress --color -p --bail",
     "postinstall": "npm run build",
     "start": "node .",
-    "start-dev": "webpack-dev-server --config webpack.config.client-dev.js --content-base dev-static/ --inline --hot"
+    "start-dev": "node index-dev.js",
+    "start-dev2": "webpack-dev-server --config webpack.config.client-dev.js --content-base dev-static/ --inline --hot"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "babel-cli": "^6.10.1",
+    "babel-preset-react-hmre": "^1.1.1",
     "babel-register": "^6.9.0",
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
@@ -36,7 +38,9 @@
     "proxyquire": "^1.7.10",
     "sinon": "^1.17.4",
     "supertest": "^1.2.0",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-dev-server": "^1.14.1",
+    "webpack-hot-middleware": "^2.12.1"
   },
   "dependencies": {
     "babel-core": "^6.10.4",
