--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "build-client": "NODE_ENV=production webpack --config webpack.config.client.js --progress --color -p --bail",
     "postinstall": "npm run build",
     "start": "node .",
-    "start-dev": "node index-dev.js",
-    "start-dev2": "webpack-dev-server --config webpack.config.client-dev.js --content-base dev-static/ --inline --hot"
+    "start-dev": "node index-dev.js"
   },
   "author": "",
   "license": "ISC",
