--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "mocha": "^2.5.3",
     "nyc": "^6.6.1",
     "proxyquire": "^1.7.10",
+    "redux-devtools": "^3.3.1",
+    "redux-devtools-dock-monitor": "^1.1.1",
+    "redux-devtools-log-monitor": "^1.0.11",
     "sinon": "^1.17.4",
     "supertest": "^1.2.0",
     "webpack-dev-server": "^1.14.1"
