--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "isomorphic-fetch": "^2.2.1",
     "json-loader": "^0.5.4",
+    "moment": "^2.14.1",
     "node-sass": "^3.8.0",
     "pg": "^6.0.1",
     "react": "^15.1.0",
